feat: improve CLI
* Use picocli
* Add discoverability for providers